postgres_simple/postgres-service-loadbalancer.yml
---
# Define a 'Service' To Expose postgres to Other Services
apiVersion: v1
kind: Service
metadata:
  name: postgres-loadbalancer
  labels:
    app: postgres
    tier: database
spec:
  type: LoadBalancer
  externalIPs:
  - 192.168.56.199
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30002
      protocol: TCP
  selector:
    app: postgres
    tier: database
  externalTrafficPolicy: Local
