postgres_simple/service-nodeport.yml
---
# Define a 'Service' To Expose postgres to Other Services
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport
  labels:
    app: postgres
    tier: database
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30001
      protocol: TCP
  selector:
    app: postgres
    tier: database
